# finsight-analyst

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: eval.yml  lint-test.yml
configs/: retrieval_configs.py
data/processed/: .gitignore  bm25_index.pkl.dvc  chunks.json.dvc
src/agents/: analyst.py  critic.py  graph.py  retriever_node.py  router.py  state.py  test_agent.py
src/evaluation/: benchmark.py  mlflow_runner.py  monitoring.py  qa_pairs.json  results.json
src/ingestion/: chunker.py  metadata_extractor.py  pdf_parser.py  pipeline.py
src/retrieval/: bm25_retriever.py  build_index.py  embedder.py  hybrid_retriever.py  vector_store.py
src/serving/: api.py  frontend.py
tests/: test_chunker.py
