[project]
name = "finsight-analyst"
version = "0.1.0"
description = "Agentic RAG system for financial document intelligence"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]