[project]
name = "finsight-analyst"
version = "0.1.0"
description = "Agentic RAG system for financial document intelligence"
requires-python = ">=3.11"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "F", "I"]